--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -56,6 +56,7 @@
     "./DrawerTitle": "./dist/components/DrawerTitle.js",
     "./DrawerTrigger": "./dist/components/DrawerTrigger.js",
     "./DropdownMenu": "./dist/components/DropdownMenu.js",
+    "./DropdownMenuCheckboxItem": "./dist/components/DropdownMenuCheckboxItem.js",
     "./DropdownMenuContent": "./dist/components/DropdownMenuContent.js",
     "./DropdownMenuGroup": "./dist/components/DropdownMenuGroup.js",
     "./DropdownMenuItem": "./dist/components/DropdownMenuItem.js",
