split Sidenav to Sidebar and Nav components
so we can have double navs with a primary and a secondary nav

and in a future PR we will introduce the SubNav

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -88,8 +88,14 @@
     "./ListboxRadioItem": "./dist/components/ListboxRadioItem.js",
     "./ListboxScrollArea": "./dist/components/ListboxScrollArea.js",
     "./ListboxSeparator": "./dist/components/ListboxSeparator.js",
-    "./ModalLayer": "./dist/components/ModalLayer.js",
     "./MenuButton": "./dist/components/MenuButton.js",
+    "./ModalLayer": "./dist/components/ModalLayer.js",
+    "./Nav": "./dist/components/Nav.js",
+    "./NavAccountItem": "./dist/components/NavAccountItem.js",
+    "./NavBody": "./dist/components/NavBody.js",
+    "./NavFooter": "./dist/components/NavFooter.js",
+    "./NavHeader": "./dist/components/NavHeader.js",
+    "./NavItem": "./dist/components/NavItem.js",
     "./Pagination": "./dist/components/Pagination.js",
     "./Paper": "./dist/components/Paper.js",
     "./Popover": "./dist/components/Popover.js",
@@ -103,13 +109,8 @@
     "./SegmentedControl": "./dist/components/SegmentedControl.js",
     "./SegmentedControlItem": "./dist/components/SegmentedControlItem.js",
     "./Separator": "./dist/components/Separator.js",
-    "./Sidenav": "./dist/components/Sidenav.js",
-    "./SidenavAccountItem": "./dist/components/SidenavAccountItem.js",
-    "./SidenavBody": "./dist/components/SidenavBody.js",
-    "./SidenavFooter": "./dist/components/SidenavFooter.js",
-    "./SidenavHeader": "./dist/components/SidenavHeader.js",
-    "./SidenavItem": "./dist/components/SidenavItem.js",
-    "./SidenavToggle": "./dist/components/SidenavToggle.js",
+    "./Sidebar": "./dist/components/Sidebar.js",
+    "./SidebarToggle": "./dist/components/SidebarToggle.js",
     "./Skeleton": "./dist/components/Skeleton.js",
     "./Spinner": "./dist/components/Spinner.js",
     "./Switch": "./dist/components/Switch.js",
