--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -23,6 +23,7 @@
     ".next/types/**/*.ts",
     "**/*.ts",
     "**/*.tsx",
+    "mdx.config.mjs",
     "props.config.mjs"
   ],
   "exclude": ["node_modules"],
