add ellipsis menu button

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -24,6 +24,7 @@
     "./AlertDialogFooter": "./dist/components/AlertDialogFooter.js",
     "./AlertDialogHeader": "./dist/components/AlertDialogHeader.js",
     "./AlertDialogTrigger": "./dist/components/AlertDialogTrigger.js",
+    "./AngleMenuButton": "./dist/components/AngleMenuButton.js",
     "./Avatar": "./dist/components/Avatar.js",
     "./AvatarGroup": "./dist/components/AvatarGroup.js",
     "./AxiomProvider": "./dist/components/AxiomProvider.js",
@@ -66,6 +67,7 @@
     "./DropdownMenuSubContent": "./dist/components/DropdownMenuSubContent.js",
     "./DropdownMenuSubTrigger": "./dist/components/DropdownMenuTrigger.js",
     "./DropdownMenuTrigger": "./dist/components/DropdownMenuTrigger.js",
+    "./EllipsisMenuButton": "./dist/components/EllipsisMenuButton.js",
     "./Field": "./dist/components/Field.js",
     "./FieldLabel": "./dist/components/FieldLabel.js",
     "./Flex": "./dist/components/Flex.js",
@@ -89,7 +91,6 @@
     "./ListboxRadioItem": "./dist/components/ListboxRadioItem.js",
     "./ListboxScrollArea": "./dist/components/ListboxScrollArea.js",
     "./ListboxSeparator": "./dist/components/ListboxSeparator.js",
-    "./MenuButton": "./dist/components/MenuButton.js",
     "./ModalLayer": "./dist/components/ModalLayer.js",
     "./Nav": "./dist/components/Nav.js",
     "./NavAccountItem": "./dist/components/NavAccountItem.js",
