--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -75,6 +75,7 @@
     "@emotion/hash": "^0.9.2",
     "@mantine/hooks": "^7.15.3",
     "@optiaxiom/shared": "workspace:^",
+    "@radix-ui/react-focus-scope": "^1.1.1",
     "@types/node": "^22.10.5",
     "@types/use-sync-external-store": "^0.0.6",
     "@vanilla-extract/css": "^1.17.0",
