--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    if: ${{ github.event_name == 'pull_request' || github.repository_owner == 'optimizely-axiom' }}
+    if: ${{ github.event_name == 'pull_request' && github.repository_owner == 'optimizely-axiom' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
