manually add sub path alternative of exports for backwards compatibility
older projects using "node" moduleResolution will not support the package.json
"exports" field and so we must add the sub paths manually using actual dirs
within the project and point them back to the file in dist/

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,123 @@ storybook-static
 .eslintcache
 .next
 _pagefind/
+
+/packages/web-components/Alert/
+/packages/web-components/AlertDialog/
+/packages/web-components/AlertDialogAction/
+/packages/web-components/AlertDialogBody/
+/packages/web-components/AlertDialogCancel/
+/packages/web-components/AlertDialogContent/
+/packages/web-components/AlertDialogFooter/
+/packages/web-components/AlertDialogHeader/
+/packages/web-components/AlertDialogTrigger/
+/packages/web-components/AngleMenuButton/
+/packages/web-components/Avatar/
+/packages/web-components/AvatarGroup/
+/packages/web-components/AxiomProvider/
+/packages/web-components/Badge/
+/packages/web-components/Banner/
+/packages/web-components/Box/
+/packages/web-components/Button/
+/packages/web-components/ButtonGroup/
+/packages/web-components/Checkbox/
+/packages/web-components/Code/
+/packages/web-components/Dialog/
+/packages/web-components/DialogBody/
+/packages/web-components/DialogClose/
+/packages/web-components/DialogContent/
+/packages/web-components/DialogFooter/
+/packages/web-components/DialogForm/
+/packages/web-components/DialogHeader/
+/packages/web-components/DialogTrigger/
+/packages/web-components/Disclosure/
+/packages/web-components/DisclosureContent/
+/packages/web-components/DisclosureTrigger/
+/packages/web-components/Drawer/
+/packages/web-components/DrawerActions/
+/packages/web-components/DrawerBody/
+/packages/web-components/DrawerClose/
+/packages/web-components/DrawerContent/
+/packages/web-components/DrawerDescription/
+/packages/web-components/DrawerFooter/
+/packages/web-components/DrawerHeader/
+/packages/web-components/DrawerTitle/
+/packages/web-components/DrawerTrigger/
+/packages/web-components/DropdownMenu/
+/packages/web-components/DropdownMenuCheckboxItem/
+/packages/web-components/DropdownMenuContent/
+/packages/web-components/DropdownMenuGroup/
+/packages/web-components/DropdownMenuItem/
+/packages/web-components/DropdownMenuLabel/
+/packages/web-components/DropdownMenuSeparator/
+/packages/web-components/DropdownMenuSub/
+/packages/web-components/DropdownMenuSubContent/
+/packages/web-components/DropdownMenuSubTrigger/
+/packages/web-components/DropdownMenuTrigger/
+/packages/web-components/EllipsisMenuButton/
+/packages/web-components/Field/
+/packages/web-components/FieldLabel/
+/packages/web-components/Flex/
+/packages/web-components/Grid/
+/packages/web-components/Heading/
+/packages/web-components/Indicator/
+/packages/web-components/Input/
+/packages/web-components/InputAddon/
+/packages/web-components/InputControl/
+/packages/web-components/InputRoot/
+/packages/web-components/Kbd/
+/packages/web-components/Link/
+/packages/web-components/Listbox/
+/packages/web-components/ListboxCheckboxItem/
+/packages/web-components/ListboxEmpty/
+/packages/web-components/ListboxFooter/
+/packages/web-components/ListboxGroup/
+/packages/web-components/ListboxItem/
+/packages/web-components/ListboxItemIndicator/
+/packages/web-components/ListboxLabel/
+/packages/web-components/ListboxRadioItem/
+/packages/web-components/ListboxScrollArea/
+/packages/web-components/ListboxSeparator/
+/packages/web-components/ModalLayer/
+/packages/web-components/Nav/
+/packages/web-components/NavAccountItem/
+/packages/web-components/NavBody/
+/packages/web-components/NavFooter/
+/packages/web-components/NavHeader/
+/packages/web-components/NavItem/
+/packages/web-components/NavList/
+/packages/web-components/Pagination/
+/packages/web-components/Paper/
+/packages/web-components/Popover/
+/packages/web-components/PopoverAnchor/
+/packages/web-components/PopoverContent/
+/packages/web-components/PopoverTrigger/
+/packages/web-components/Progress/
+/packages/web-components/Radio/
+/packages/web-components/RadioGroup/
+/packages/web-components/SearchInput/
+/packages/web-components/SegmentedControl/
+/packages/web-components/SegmentedControlItem/
+/packages/web-components/Separator/
+/packages/web-components/Sidebar/
+/packages/web-components/SidebarToggle/
+/packages/web-components/Skeleton/
+/packages/web-components/Spinner/
+/packages/web-components/Switch/
+/packages/web-components/Tabs/
+/packages/web-components/TabsContent/
+/packages/web-components/TabsList/
+/packages/web-components/TabsTrigger/
+/packages/web-components/Text/
+/packages/web-components/Textarea/
+/packages/web-components/ThemeProvider/
+/packages/web-components/Toast/
+/packages/web-components/ToastAction/
+/packages/web-components/ToastTitle/
+/packages/web-components/ToggleButton/
+/packages/web-components/Tooltip/
+/packages/web-components/TooltipContent/
+/packages/web-components/TooltipRoot/
+/packages/web-components/TooltipTrigger/
+/packages/web-components/Transition/
+/packages/web-components/TransitionGroup/
