add radix packages to web-components
so we can inline types when generating type declarations

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -266,6 +266,10 @@
     "@optiaxiom/globals": "workspace:^",
     "@optiaxiom/react": "workspace:^",
     "@optiaxiom/shared": "workspace:^",
+    "@radix-ui/react-context": "^1.1.1",
+    "@radix-ui/react-primitive": "^2.0.2",
+    "@radix-ui/react-roving-focus": "^1.1.2",
+    "@radix-ui/rect": "^1.1.0",
     "@rollup/plugin-commonjs": "^28.0.2",
     "@types/node": "^22.12.0",
     "cssnano": "^7.0.6",
