--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -9,6 +9,7 @@
     "postbuild": "pagefind --site .next/server/app --output-path out/_pagefind"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.5.0",
     "@optiaxiom/react": "workspace:^",
     "@optiaxiom/shared": "workspace:^",
     "@radix-ui/react-visually-hidden": "^1.1.2",
