properly add component jsx typings for stencil

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -85,6 +85,7 @@
     "./ListboxScrollArea": "./dist/components/ListboxScrollArea.js",
     "./ListboxSeparator": "./dist/components/ListboxSeparator.js",
     "./ListboxSwitchItem": "./dist/components/ListboxSwitchItem.js",
+    "./ModalContextProvider": "./dist/components/ModalContextProvider.js",
     "./ModalLayer": "./dist/components/ModalLayer.js",
     "./Nav": "./dist/components/Nav.js",
     "./NavAccountItem": "./dist/components/NavAccountItem.js",
@@ -120,10 +121,12 @@
     "./ThemeProvider": "./dist/components/ThemeProvider.js",
     "./Toast": "./dist/components/Toast.js",
     "./ToastAction": "./dist/components/ToastAction.js",
+    "./ToastProvider": "./dist/components/ToastProvider.js",
     "./ToastTitle": "./dist/components/ToastTitle.js",
     "./ToggleButton": "./dist/components/ToggleButton.js",
     "./Tooltip": "./dist/components/Tooltip.js",
     "./TooltipContent": "./dist/components/TooltipContent.js",
+    "./TooltipProvider": "./dist/components/TooltipProvider.js",
     "./TooltipRoot": "./dist/components/TooltipRoot.js",
     "./TooltipTrigger": "./dist/components/TooltipTrigger.js",
     "./Transition": "./dist/components/Transition.js",
