promote secondary nav components to stable

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -84,9 +84,13 @@
     "./NavAccountItem": "./dist/components/NavAccountItem.js",
     "./NavBody": "./dist/components/NavBody.js",
     "./NavFooter": "./dist/components/NavFooter.js",
+    "./NavGroup": "./dist/components/NavGroup.js",
+    "./NavGroupContent": "./dist/components/NavGroupContent.js",
+    "./NavGroupTrigger": "./dist/components/NavGroupTrigger.js",
     "./NavHeader": "./dist/components/NavHeader.js",
     "./NavItem": "./dist/components/NavItem.js",
     "./NavList": "./dist/components/NavList.js",
+    "./NavSeparator": "./dist/components/NavSeparator.js",
     "./Pagination": "./dist/components/Pagination.js",
     "./Paper": "./dist/components/Paper.js",
     "./Popover": "./dist/components/Popover.js",
@@ -104,6 +108,7 @@
     "./SidebarToggle": "./dist/components/SidebarToggle.js",
     "./Skeleton": "./dist/components/Skeleton.js",
     "./Spinner": "./dist/components/Spinner.js",
+    "./SubNav": "./dist/components/SubNav.js",
     "./Switch": "./dist/components/Switch.js",
     "./Tabs": "./dist/components/Tabs.js",
     "./TabsContent": "./dist/components/TabsContent.js",
