--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "vitest run --project=@optiaxiom/globals --project=@optiaxiom/react"
   },
   "devDependencies": {
-    "@changesets/cli": "^2.27.12",
+    "@changesets/cli": "^2.28.1",
     "@optiaxiom/shared": "workspace:^",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.1",
@@ -27,22 +27,22 @@
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vanilla-extract/integration": "^7.1.12",
-    "@vanilla-extract/rollup-plugin": "^1.3.13",
+    "@vanilla-extract/rollup-plugin": "^1.3.14",
     "@vanilla-extract/vite-plugin": "^4.0.20",
-    "@vitest/browser": "3.0.4",
+    "@vitest/browser": "^3.0.9",
     "concurrently": "^9.1.2",
     "esbuild": "0.17.6",
     "happy-dom": "^15.11.7",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rollup": "^4.34.6",
+    "rollup": "^4.36.0",
     "rollup-plugin-dts": "^6.1.1",
-    "rollup-plugin-esbuild": "^6.2.0",
-    "typescript": "^5.7.3",
-    "vitest": "3.0.4",
-    "wait-on": "^8.0.2",
-    "webdriverio": "^9.8.0"
+    "rollup-plugin-esbuild": "^6.2.1",
+    "typescript": "^5.8.2",
+    "vitest": "^3.0.9",
+    "wait-on": "^8.0.3",
+    "webdriverio": "^9.12.0"
   },
   "pnpm": {
     "patchedDependencies": {
