--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "concurrently": "^9.1.2",
     "esbuild": "0.17.6",
     "happy-dom": "^17.4.4",
+    "playwright": "^1.51.1",
     "prettier": "^3.5.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -41,8 +42,7 @@
     "rollup-plugin-esbuild": "^6.2.1",
     "typescript": "^5.8.2",
     "vitest": "^3.0.9",
-    "wait-on": "^8.0.3",
-    "webdriverio": "^9.12.0"
+    "wait-on": "^8.0.3"
   },
   "pnpm": {
     "patchedDependencies": {
