--- a/packages/globals/package.json
+++ b/packages/globals/package.json
@@ -15,9 +15,9 @@
   "license": "Apache-2.0",
   "exports": {
     ".": {
+      "types": "./dist/index.d.ts",
       "import": "./dist/esm/index.js",
-      "require": "./dist/cjs/index.js",
-      "types": "./dist/index.d.ts"
+      "require": "./dist/cjs/index.js"
     },
     "./fonts": {
       "import": "./dist/esm/fonts.js",
