--- a/packages/globals/package.json
+++ b/packages/globals/package.json
@@ -42,7 +42,9 @@
   },
   "devDependencies": {
     "@optiaxiom/shared": "workspace:^",
-    "@vanilla-extract/css": "^1.17.1"
+    "@vanilla-extract/css": "^1.17.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "peerDependencies": {
     "react": "^16.14.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
