--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -81,7 +81,9 @@
     "@types/node": "^22.13.10",
     "@types/use-sync-external-store": "^0.0.6",
     "@vanilla-extract/css": "^1.17.1",
-    "@vanilla-extract/sprinkles": "^1.6.3"
+    "@vanilla-extract/sprinkles": "^1.6.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "peerDependencies": {
     "@tanstack/react-table": "^8.0.0",
