--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -24,12 +24,14 @@
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.21.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/browser": "3.1.1",
     "chromatic": "^11.28.2",
     "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-docgen": "^8.0.0",
     "react-dom": "^18.3.1",
     "storybook": "^8.6.12",
-    "vite": "^6.3.2"
+    "vite": "^6.3.2",
+    "vitest": "3.1.1"
   }
 }
