--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@vanilla-extract/integration": "^8.0.1",
     "@vanilla-extract/rollup-plugin": "^1.3.14",
     "@vanilla-extract/vite-plugin": "^5.0.1",
-    "@vitest/browser": "^3.1.2",
+    "@vitest/browser": "3.1.1",
     "concurrently": "^9.1.2",
     "esbuild": "0.17.6",
     "happy-dom": "^17.4.4",
@@ -41,7 +41,7 @@
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-esbuild": "^6.2.1",
     "typescript": "^5.8.3",
-    "vitest": "^3.1.2",
+    "vitest": "3.1.1",
     "wait-on": "^8.0.3"
   },
   "pnpm": {
