move Select to stable

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -102,6 +102,9 @@
     "./SearchInput": "./dist/components/SearchInput.js",
     "./SegmentedControl": "./dist/components/SegmentedControl.js",
     "./SegmentedControlItem": "./dist/components/SegmentedControlItem.js",
+    "./Select": "./dist/components/Select.js",
+    "./SelectContent": "./dist/components/SelectContent.js",
+    "./SelectTrigger": "./dist/components/SelectTrigger.js",
     "./Separator": "./dist/components/Separator.js",
     "./Sidebar": "./dist/components/Sidebar.js",
     "./SidebarToggle": "./dist/components/SidebarToggle.js",
