add keyboard interaction doc sections
- improve Kbd styles by using sans font and other style upgrades (so cmd/shift
  keys look much nicer)
- add aria-label for Kbd shortcuts
- add changelog for moving Select out of Alpha

--- a/apps/docs/tsconfig.json
+++ b/apps/docs/tsconfig.json
@@ -9,6 +9,7 @@
     "jsx": "preserve",
     "lib": ["dom", "dom.iterable", "esnext"],
     "paths": {
+      "@/components": ["components"],
       "@/components/*": ["components/*"],
       "@/demos/*": ["demos/*"],
       "@optiaxiom/globals": ["../../packages/globals/src"],
