--- a/apps/docs/tsconfig.next.json
+++ b/apps/docs/tsconfig.next.json
@@ -2,6 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "paths": {
+      "@/components": ["components"],
       "@/components/*": ["components/*"],
       "@/demos/*": ["demos/*"]
     }
