export Cover component
and add relative position to table cells to ensure cover works inside them

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -31,6 +31,7 @@
     "./ButtonGroup": "./dist/components/ButtonGroup.js",
     "./Checkbox": "./dist/components/Checkbox.js",
     "./Code": "./dist/components/Code.js",
+    "./Cover": "./dist/components/Cover.js",
     "./Dialog": "./dist/components/Dialog.js",
     "./DialogBody": "./dist/components/DialogBody.js",
     "./DialogClose": "./dist/components/DialogClose.js",
