fix type check for web components
use record and check both ways to ensure types are strictly equal

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -32,6 +32,9 @@
     "./Checkbox": "./dist/components/Checkbox.js",
     "./Code": "./dist/components/Code.js",
     "./Cover": "./dist/components/Cover.js",
+    "./DataTable": "./dist/components/DataTable.js",
+    "./DataTableBody": "./dist/components/DataTableBody.js",
+    "./DataTableFooter": "./dist/components/DataTableFooter.js",
     "./Dialog": "./dist/components/Dialog.js",
     "./DialogBody": "./dist/components/DialogBody.js",
     "./DialogClose": "./dist/components/DialogClose.js",
@@ -66,6 +69,7 @@
     "./InputControl": "./dist/components/InputControl.js",
     "./InputRoot": "./dist/components/InputRoot.js",
     "./Kbd": "./dist/components/Kbd.js",
+    "./LabelMenuButton": "./dist/components/LabelMenuButton.js",
     "./Link": "./dist/components/Link.js",
     "./Listbox": "./dist/components/Listbox.js",
     "./ListboxCheckboxItem": "./dist/components/ListboxCheckboxItem.js",
@@ -74,6 +78,7 @@
     "./ListboxGroup": "./dist/components/ListboxGroup.js",
     "./ListboxItem": "./dist/components/ListboxItem.js",
     "./ListboxItemIndicator": "./dist/components/ListboxItemIndicator.js",
+    "./ListboxItemized": "./dist/components/ListboxItemized.js",
     "./ListboxLabel": "./dist/components/ListboxLabel.js",
     "./ListboxRadioItem": "./dist/components/ListboxRadioItem.js",
     "./ListboxSeparator": "./dist/components/ListboxSeparator.js",
@@ -113,6 +118,13 @@
     "./Spinner": "./dist/components/Spinner.js",
     "./SubNav": "./dist/components/SubNav.js",
     "./Switch": "./dist/components/Switch.js",
+    "./Table": "./dist/components/Table.js",
+    "./TableAction": "./dist/components/TableAction.js",
+    "./TableBody": "./dist/components/TableBody.js",
+    "./TableCell": "./dist/components/TableCell.js",
+    "./TableHeader": "./dist/components/TableHeader.js",
+    "./TableHeaderCell": "./dist/components/TableHeaderCell.js",
+    "./TableRow": "./dist/components/TableRow.js",
     "./Tabs": "./dist/components/Tabs.js",
     "./TabsContent": "./dist/components/TabsContent.js",
     "./TabsList": "./dist/components/TabsList.js",
