move DateInput and DateRangePicker to stable

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -35,6 +35,10 @@
     "./DataTable": "./dist/components/DataTable.js",
     "./DataTableBody": "./dist/components/DataTableBody.js",
     "./DataTableFooter": "./dist/components/DataTableFooter.js",
+    "./DateInput": "./dist/components/DateInput.js",
+    "./DateRangePicker": "./dist/components/DateRangePicker.js",
+    "./DateRangePickerContent": "./dist/components/DateRangePickerContent.js",
+    "./DateRangePickerTrigger": "./dist/components/DateRangePickerTrigger.js",
     "./Dialog": "./dist/components/Dialog.js",
     "./DialogBody": "./dist/components/DialogBody.js",
     "./DialogClose": "./dist/components/DialogClose.js",
@@ -83,8 +87,8 @@
     "./ListboxRadioItem": "./dist/components/ListboxRadioItem.js",
     "./ListboxSeparator": "./dist/components/ListboxSeparator.js",
     "./ListboxSwitchItem": "./dist/components/ListboxSwitchItem.js",
-    "./ModalProvider": "./dist/components/ModalProvider.js",
     "./ModalLayer": "./dist/components/ModalLayer.js",
+    "./ModalProvider": "./dist/components/ModalProvider.js",
     "./Nav": "./dist/components/Nav.js",
     "./NavAccountItem": "./dist/components/NavAccountItem.js",
     "./NavBody": "./dist/components/NavBody.js",
