--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bundle-size": "oas-bundle-size",
     "design-tokens": "oas-design-tokens",
     "dev": "pnpm run --parallel -F !web-components dev",
+    "dev:docs": "pnpm -F docs... --parallel dev",
+    "dev:storybook": "pnpm -F storybook... --parallel dev",
     "lint": "oas-lint",
     "release": "pnpm build && changeset publish",
     "test": "vitest run --project=@optiaxiom/globals --project=@optiaxiom/react"
