--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -36,6 +36,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@dnd-kit/abstract": "^0.1.13",
+    "@dnd-kit/helpers": "^0.1.13",
+    "@dnd-kit/react": "^0.1.13",
     "@optiaxiom/globals": "workspace:^",
     "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-arrow": "^1.1.4",
