--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -24,6 +24,7 @@
     "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-table": "^8.21.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "@vitest/browser": "3.1.1",
     "chromatic": "^11.28.3",
     "raw-loader": "^4.0.2",
     "react": "^18.3.1",
@@ -31,6 +32,7 @@
     "react-dom": "^18.3.1",
     "storybook": "^8.6.14",
     "storybook-addon-test-codegen": "^1.3.4",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vitest": "3.1.1"
   }
 }
