--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -34,6 +34,7 @@
     "./Cover": "./dist/components/Cover.js",
     "./DataTable": "./dist/components/DataTable.js",
     "./DataTableBody": "./dist/components/DataTableBody.js",
+    "./DataTableCheckbox": "./dist/components/DataTableCheckbox.js",
     "./DataTableFooter": "./dist/components/DataTableFooter.js",
     "./DateInput": "./dist/components/DateInput.js",
     "./DateRangePicker": "./dist/components/DateRangePicker.js",
