add DataTableAction for primary/secondary actions
setting a primary action or using DataTableCheckbox will enable keyboard
navigation of rows/actions

updated ActionsContent to handle case where the element itself is the
interactive control

added new selected and focus-visible states/styles for table rows

--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -34,6 +34,7 @@
     "./Cover": "./dist/components/Cover.js",
     "./DataTable": "./dist/components/DataTable.js",
     "./DataTableBody": "./dist/components/DataTableBody.js",
+    "./DataTableAction": "./dist/components/DataTableAction.js",
     "./DataTableCheckbox": "./dist/components/DataTableCheckbox.js",
     "./DataTableFooter": "./dist/components/DataTableFooter.js",
     "./DateInput": "./dist/components/DateInput.js",
