--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -37,6 +37,7 @@
     "./DataTableAction": "./dist/components/DataTableAction.js",
     "./DataTableCheckbox": "./dist/components/DataTableCheckbox.js",
     "./DataTableFooter": "./dist/components/DataTableFooter.js",
+    "./DataTableLabel": "./dist/components/DataTableLabel.js",
     "./DateInput": "./dist/components/DateInput.js",
     "./DateRangePicker": "./dist/components/DateRangePicker.js",
     "./DateRangePickerContent": "./dist/components/DateRangePickerContent.js",
