--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -13,14 +13,10 @@
     "@optiaxiom/react": "workspace:^",
     "@optiaxiom/shared": "workspace:^",
     "@radix-ui/react-visually-hidden": "^1.2.3",
-    "@storybook/addon-a11y": "^8.6.14",
-    "@storybook/addon-actions": "^8.6.14",
-    "@storybook/addon-designs": "^8.2.1",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/experimental-addon-test": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/react-vite": "^8.6.14",
-    "@storybook/test": "^8.6.14",
+    "@storybook/addon-a11y": "^9.0.4",
+    "@storybook/addon-designs": "^10.0.1",
+    "@storybook/addon-vitest": "9.0.4",
+    "@storybook/react-vite": "^9.0.4",
     "@tabler/icons-react": "^3.33.0",
     "@tanstack/react-table": "^8.21.3",
     "@vitejs/plugin-react": "^4.4.1",
@@ -30,8 +26,8 @@
     "react": "^18.3.1",
     "react-docgen": "^8.0.0",
     "react-dom": "^18.3.1",
-    "storybook": "^8.6.14",
-    "storybook-addon-test-codegen": "^1.3.4",
+    "storybook": "^9.0.4",
+    "storybook-addon-test-codegen": "^2.0.0",
     "vite": "^6.3.5",
     "vitest": "3.1.1"
   }
