--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -85,6 +85,8 @@
     "@types/use-sync-external-store": "^1.5.0",
     "@vanilla-extract/css": "^1.17.3",
     "@vanilla-extract/sprinkles": "^1.6.4",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
