--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "@changesets/cli": "^2.29.6",
     "@eslint/js": "^9.33.0",
     "@optiaxiom/shared": "workspace:^",
-    "@rollup/plugin-json": "^6.1.0",
-    "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/pluginutils": "^5.2.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -30,7 +28,7 @@
     "@types/react": "^18.3.23",
     "@types/react-dom": "^18.3.7",
     "@vanilla-extract/integration": "^8.0.4",
-    "@vanilla-extract/rollup-plugin": "^1.4.1",
+    "@vanilla-extract/rollup-plugin": "^1.4.2",
     "@vanilla-extract/vite-plugin": "^5.1.1",
     "@vitest/browser": "^3.2.4",
     "concurrently": "^9.2.0",
@@ -41,9 +39,8 @@
     "prettier": "^3.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "rollup": "^4.47.1",
-    "rollup-plugin-dts": "^6.2.3",
-    "rollup-plugin-esbuild": "^6.2.1",
+    "rolldown": "1.0.0-beta.50",
+    "rolldown-plugin-dts": "^0.17.8",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4",
     "wait-on": "^8.0.4"
