--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -30,8 +30,8 @@
   ],
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && NODE_ENV=production rollup -c",
-    "dev": "rm -rf dist && wait-on ../../packages/globals/dist/index.d.ts && rollup -cw",
+    "build": "rm -rf dist && NODE_ENV=production rolldown -c",
+    "dev": "rm -rf dist && wait-on ../../packages/globals/dist/index.d.ts && rolldown -wc",
     "test": "vitest"
   },
   "dependencies": {
