--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -164,8 +164,8 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist && NODE_ENV=production rollup -c",
-    "dev": "rm -rf dist && wait-on ../../packages/react/dist/index.d.ts && rollup -cw",
+    "build": "rm -rf dist && NODE_ENV=production rolldown -c",
+    "dev": "rm -rf dist && wait-on ../../packages/react/dist/index.d.ts && rolldown -wc",
     "test": "vitest"
   },
   "devDependencies": {
@@ -176,7 +176,6 @@
     "@radix-ui/react-primitive": "^2.1.3",
     "@radix-ui/react-roving-focus": "^1.1.11",
     "@radix-ui/rect": "^1.1.1",
-    "@rollup/plugin-commonjs": "^28.0.6",
     "@types/node": "^22.17.2",
     "cssnano": "^7.1.0",
     "fast-glob": "^3.3.3",
