--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -75,6 +75,7 @@
     "react-day-picker": "^9.7.0",
     "react-dropzone": "^14.3.8",
     "react-remove-scroll": "^2.7.1",
+    "react-resizable-panels": "^3.0.3",
     "use-sync-external-store": "^1.5.0"
   },
   "devDependencies": {
