--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -20,7 +20,7 @@
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-table": "^8.21.3",
     "@vitejs/plugin-react": "^4.5.2",
-    "@vitest/browser": "3.1.1",
+    "@vitest/browser": "^3.2.4",
     "chromatic": "^12.2.0",
     "raw-loader": "^4.0.2",
     "react": "^18.3.1",
@@ -29,6 +29,6 @@
     "storybook": "^9.0.8",
     "storybook-addon-test-codegen": "^2.0.1",
     "vite": "^6.3.5",
-    "vitest": "3.1.1"
+    "vitest": "^3.2.4"
   }
 }
