--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@vanilla-extract/integration": "^8.0.3",
     "@vanilla-extract/rollup-plugin": "^1.3.17",
     "@vanilla-extract/vite-plugin": "^5.0.5",
-    "@vitest/browser": "3.1.1",
+    "@vitest/browser": "^3.2.4",
     "concurrently": "^9.1.2",
     "esbuild": "0.17.6",
     "happy-dom": "^17.6.3",
@@ -43,7 +43,7 @@
     "rollup-plugin-dts": "^6.2.1",
     "rollup-plugin-esbuild": "^6.2.1",
     "typescript": "^5.8.3",
-    "vitest": "3.1.1",
+    "vitest": "^3.2.4",
     "wait-on": "^8.0.3"
   },
   "pnpm": {
