patch tailwind reset selector in nextra theme
universal selectors are quite expensive and is slowing down our axiom
components. so we replace it with a more scoped selector only targetting nextra
elements or ones using tailwind classes.

basically doing what optimizeUniversalDefaults does

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "pnpm": {
     "patchedDependencies": {
       "@vanilla-extract/sprinkles": "patches/@vanilla-extract__sprinkles.patch",
+      "nextra-theme-docs": "patches/nextra-theme-docs.patch",
       "react-docgen-typescript": "patches/react-docgen-typescript.patch"
     }
   }
