--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -58,6 +58,7 @@
     "@radix-ui/react-portal": "^1.1.9",
     "@radix-ui/react-primitive": "^2.1.3",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-roving-focus": "^1.1.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
