--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -89,6 +89,9 @@
     "./ListboxRadioItem": "./dist/components/ListboxRadioItem.js",
     "./ListboxSeparator": "./dist/components/ListboxSeparator.js",
     "./ListboxSwitchItem": "./dist/components/ListboxSwitchItem.js",
+    "./Menu": "./dist/components/Menu.js",
+    "./MenuContent": "./dist/components/MenuContent.js",
+    "./MenuTrigger": "./dist/components/MenuTrigger.js",
     "./ModalLayer": "./dist/components/ModalLayer.js",
     "./ModalProvider": "./dist/components/ModalProvider.js",
     "./Nav": "./dist/components/Nav.js",
