--- a/packages/web-components/package.json
+++ b/packages/web-components/package.json
@@ -30,6 +30,14 @@
     "./Breadcrumb": "./dist/components/Breadcrumb.js",
     "./Button": "./dist/components/Button.js",
     "./ButtonGroup": "./dist/components/ButtonGroup.js",
+    "./Card": "./dist/components/Card.js",
+    "./CardAction": "./dist/components/CardAction.js",
+    "./CardCheckbox": "./dist/components/CardCheckbox.js",
+    "./CardFooter": "./dist/components/CardFooter.js",
+    "./CardHeader": "./dist/components/CardHeader.js",
+    "./CardImage": "./dist/components/CardImage.js",
+    "./CardLink": "./dist/components/CardLink.js",
+    "./CardPreview": "./dist/components/CardPreview.js",
     "./Checkbox": "./dist/components/Checkbox.js",
     "./Code": "./dist/components/Code.js",
     "./Cover": "./dist/components/Cover.js",
