do not allow concurrent workflow runs
for CI this is just an optimization to prevent needless workflow runs

and for figma we do not want older runs to overwrite newer publishes

--- a/.github/workflows/figma.yml
+++ b/.github/workflows/figma.yml
@@ -6,6 +6,8 @@ on:
     paths:
       - apps/figma/**
 
+concurrency: ${{ github.workflow }}-${{ github.ref }}
+
 jobs:
   publish:
     if: ${{ github.repository_owner == 'optimizely-axiom' }}
