--- a/apps/figma/package.json
+++ b/apps/figma/package.json
@@ -4,8 +4,7 @@
   "type": "module",
   "version": "0.0.0",
   "scripts": {
-    "build": "figma connect publish",
-    "lint": "oas-lint"
+    "build": "figma connect publish"
   },
   "devDependencies": {
     "@figma/code-connect": "^1.3.4",
