--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@changesets/cli": "^2.29.5",
+    "@eslint/js": "^9.32.0",
     "@optiaxiom/shared": "workspace:^",
     "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^16.0.1",
@@ -34,6 +35,7 @@
     "@vitest/browser": "^3.2.4",
     "concurrently": "^9.2.0",
     "esbuild": "0.17.6",
+    "eslint": "^9.32.0",
     "happy-dom": "^18.0.1",
     "playwright": "^1.54.1",
     "prettier": "^3.6.2",
