--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,7 +117,7 @@ jobs:
 
       - run: pnpm install
 
-      - run: pnpm exec playwright install
+      - run: pnpm exec playwright install --with-deps chromium
 
       - run: pnpm -F web-components... build
 
