--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -49,6 +49,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-focus-guards": "^1.1.3",
     "@radix-ui/react-focus-scope": "^1.1.7",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-id": "^1.1.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-menu": "^2.1.16",
