install latest npm for trusted publishing

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,8 @@ jobs:
           cache: pnpm
           node-version-file: .node-version
 
+      - run: npm install -g npm@latest
+
       - run: pnpm install
 
       - uses: changesets/action@v1
