automatically generate component props file

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,5 @@ _pagefind/
 
 # generated files
 /apps/docs/components/demo/demos.ts
+/apps/docs/components/props-table/components.ts
 /packages/web-components/*/package.json
