pre-generate getDocs json
getDocs is quite expensive and most services depend on it now

so no need to call it multiple times if we can just pre-generate it once

also include all props in components rather than implicitly inheriting all
props from Box. since some components provide their own defaults for the
sprinkle prop or re-define it or omit it entirely.

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,6 @@ _pagefind/
 # generated files
 /apps/docs/components/demo/demos.ts
 /apps/docs/components/props-table/components.ts
+/apps/docs/data/
+/packages/shared/data/
 /packages/web-components/*/package.json
