--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.0",
   "scripts": {
     "build": "storybook build --docs",
-    "dev": "wait-on ../../packages/react/dist/index.d.ts ../../packages/react/dist/unstable.d.ts && storybook dev -p 6006",
+    "dev": "wait-on ../../packages/react/dist/index.d.ts ../../packages/react/dist/unstable.d.ts ../../packages/shared/data/docs.json && storybook dev -p 6006",
     "test": "vitest"
   },
   "devDependencies": {
