--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "version": "0.0.0",
   "license": "Apache-2.0",
   "scripts": {
-    "build": "pnpm -F globals... -F react... -F web-components... build",
+    "build": "pnpm -F globals... -F mcp... -F react... -F web-components... build",
     "bundle-size": "oas-bundle-size",
     "design-tokens": "oas-design-tokens",
     "dev": "pnpm run --parallel -F !web-components dev",
