--- a/.github/workflows/visual.yml
+++ b/.github/workflows/visual.yml
@@ -25,6 +25,7 @@ jobs:
 
       - run: |
           pnpm install
+          pnpm exec playwright install
           pnpm build
 
       - uses: chromaui/action@latest
