--- a/apps/docs/tsconfig.next.json
+++ b/apps/docs/tsconfig.next.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@/components": ["components"],
       "@/components/*": ["components/*"],
