--- a/apps/docs/stackblitz/package.json
+++ b/apps/docs/stackblitz/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "@optiaxiom/react": "AXIOM_VERSION",
+    "@tabler/icons-react": "3.35.0",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.1",
     "react": "18.3.1",
