--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -29,8 +29,7 @@
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "scripts": {
-    "build": "wait-on ../../packages/react/dist/index.d.ts && rm -rf dist && NODE_ENV=production rollup -c",
-    "dev": "wait-on ../../packages/react/dist/index.d.ts && rm -rf dist && rollup -cw"
+    "build": "wait-on ../../packages/react/dist/index.d.ts && rm -rf dist && NODE_ENV=production rollup -c"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
@@ -42,7 +41,6 @@
     "@optiaxiom/react": "workspace:^",
     "@optiaxiom/shared": "workspace:^",
     "@types/fuzzysearch": "^1.0.2",
-    "@types/node": "^22.17.2",
-    "tsx": "^4.20.6"
+    "@types/node": "^22.17.2"
   }
 }
