fix path to downloaded artifact
artifacts are now downloaded to the main path instead of sub directories

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
           mkdir ./pr
           echo ${{ github.event.number }} > ./pr/ID
           pnpm build
-          pnpm --silent bundle-size compare artifact/bundle-size-main.json > ./pr/bundle-size.md
+          pnpm --silent bundle-size compare bundle-size-main.json > ./pr/bundle-size.md
 
       - uses: actions/upload-artifact@v5
         with:
