--- a/apps/storybook/package.json
+++ b/apps/storybook/package.json
@@ -28,6 +28,7 @@
     "storybook": "^9.1.3",
     "storybook-addon-test-codegen": "^2.0.1",
     "vite": "^7.1.3",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "zod": "^3.25.58"
   }
 }
