--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -76,7 +76,8 @@
     "react-day-picker": "^9.9.0",
     "react-remove-scroll": "^2.7.1",
     "react-resizable-panels": "^3.0.4",
-    "use-sync-external-store": "^1.5.0"
+    "use-sync-external-store": "^1.5.0",
+    "zod": "^3.25.58"
   },
   "devDependencies": {
     "@emotion/hash": "^0.9.2",
